Mc04-Mc08 rev.luglio

--- a/pages/Mc07.md
+++ b/pages/Mc07.md
@@ -1,94 +1,82 @@
 ---
 layout: page
-title: Mc07
+title: Marco 7
 ---
 
-### Fate quello che è giusto
-1-2 Un giorno i Farisei e alcuni professori della Bibbia, arrivati da
-Gerusalemme, si radunarono attorno a Gesù. Si accorsero che alcuni dei
-suoi seguaci mangiavano senza rispettare la tradizione del lavaggio
-rituale delle mani.
+[<-indietro](Mc06.html)  [avanti->](Mc08.html)
+ 
+ ------------------------------------------------------------------------
+ 
+#### Fate quello che è giusto
 
-3-4 In genere, gli Ebrei, e in particolar modo i Farisei, seguendo le
-loro antiche tradizioni, non mangiavano se prima non si erano lavati le
-mani. Allo stesso modo, quando tornavano dal mercato, non mangiavano
-senza prima aver prima compiuto la purificazione rituale. Hanno anche
-molte altre tradizioni, come, ad esempio il rito del lavaggio dei
-bicchieri, delle pentole e degli utensili da cucina.
+##### 1-2
 
-5 Per questo i capi religiosi gli chiesero “Perché i tuoi seguaci non
-rispettano le nostre antiche usanze? Perché mangiano senza prima lavarsi
-le mani?”
+Un giorno i Farisei e alcuni esperti di Bibbia, arrivati da Gerusalemme, si radunarono attorno a Gesù. Si accorsero che alcuni dei suoi seguaci mangiavano senza rispettare la tradizione del lavaggio rituale delle mani.
 
-6-8 Gesù rispose: “Ipocriti! Isaia, il messaggero di Dio, parlava di voi
-quando diceva:”Questa gente mi onora a parole, ma non mi porta nel
-cuore. Il modo con cui mi onorano è una farsa, perché insegnano dottrine
-fatte da uomini“. Infatti voi abbandonate le regole di Dio e le
-sostituite con le vostre tradizioni.”
+##### 3-4
 
-9-13 “Come siete bravi a mettere da parte il regolamento di Dio per
-seguire il vostro! Per esempio, Mosè vi diede queste regole:”Onora tuo
-padre e tua madre“[^0703] e”Chi disconosce suo padre o sua madre, deve
-morire!“[^0704] Voi approvate invece che una persona si disinteressi dei
-propri genitori, purché gli dica:”Mi spiace, non posso aiutarvi, perché
-ho offerto a Dio quello che potevo dare a voi." Così annullate le regole
-di Dio per seguire la vostra tradizione. E questo è solo un esempio, ma
-ce ne sono molti altri!"
+In genere, gli Ebrei, e in particolar modo i Farisei, seguendo le loro antiche tradizioni, non mangiavano se prima non si erano lavati le mani. Allo stesso modo, quando tornavano dal mercato, non mangiavano senza prima aver prima compiuto la purificazione rituale. Hanno anche molte altre tradizioni, come, ad esempio il rito del lavaggio dei bicchieri, delle pentole e degli utensili da cucina.
 
-14-16 Poi Gesù invitò la folla ad avvicinarsi, e disse: “Gente!
-Ascoltatemi e cercate di capire! Voi non vi contaminate con quello che
-vi entra dentro, ma con quello che tirate fuori! Pensateci bene!”
+##### 5
 
-17-19 Quando lasciò la folla ed entrò in casa, i suoi seguaci gli
-chiesero maggiori spiegazioni. Gesù rispose: “Non lo capite neanche voi?
-Non capite che quello che mangiate non può contaminarvi? Il cibo non
-entra nel vostro cuore: passa dallo stomaco e finisce nella fogna.”
-(Gesù voleva dire che era permesso mangiare qualunque cibo)[^0705].
+Per questo i capi religiosi gli chiesero “Perché i tuoi seguaci non rispettano le nostre antiche usanze? Perché mangiano senza prima lavarsi le mani?”
 
-20-23 Poi aggiunse: “È quello che esce dalle persone che le contamina.
-Perché è dall’interno, dal cuore dell’individuo, che partono i pensieri
-cattivi, gli abusi sessuali, i furti, gli omicidi, il tradimento,
-l’insoddisfazione, la cattiveria, l’inganno, l’immoralità, l’invidia, la
-maldicenza, la superbia e tutte le follie. Sono tutte queste cattiverie
-che, uscendo dalla persona, la contaminano e la rendono impura!”.
+##### 6-8
 
-### Gesù e la fiducia della donna straniera
-24 Gesù partì dalla Galilea per dirigersi verso la zona di Tiro e Sidone
-e si fermò in una casa. Cercò di non farlo sapere a nessuno, ma non
-riuscì a passare inosservato.
+Gesù rispose: “Ipocriti! Isaia, il messaggero di Dio, parlava di voi quando diceva: *Questa gente mi onora a parole, ma non mi porta nel cuore. Il modo con cui mi onorano è una farsa, perché insegnano dottrine fatte da uomini*<sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>. Infatti voi abbandonate le regole di Dio e le sostituite con le vostre tradizioni.”
 
-25-26 Subito, una signora che aveva una figlia posseduta da uno spirito
-del male e aveva sentito parlare di Gesù gli si avvicinò e si buttò ai
-suoi piedi, pregandolo di cacciare il demonio da sua figlia. La donna
-era straniera di origine sirofenicia.
+##### 9-13
 
-27-30 Gesù le disse: “Prima vengono i figli: non sta bene prendere il
-cibo dei bambini per buttarlo ai cani!”. Ma la donna rispose: “Signor
-Padrone, ha ragione, ma persino i cagnolini sotto il tavolo mangiano le
-briciole che cadono ai figli.” E Gesù: “Visto che insisti, vai e vedrai
-che lo spirito del male ha lasciato tua figlia”. Quando la signora
-arrivò a casa trovò la bambina sdraiata sul letto e il demonio se n’era
-andato.
+“Come siete bravi a mettere da parte il regolamento di Dio per seguire il vostro! Per esempio, Mosè vi diede queste regole: *Onora tuo padre e tua madre* <sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup> e *Chi disconosce suo padre o sua madre, deve morire!* <sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup> Voi approvate invece che una persona si disinteressi dei propri genitori, purché gli dica:”Mi spiace, non posso aiutarvi, perché ho offerto a Dio quello che potevo dare a voi.“ Così annullate le regole di Dio per seguire la vostra tradizione. E questo è solo un esempio, ma ce ne sono molti altri!”
 
-### Il sordomuto
-31 Dalla zona di Tiro, Gesù passò per la città di Sidone e poi tornò
-verso il lago di Galilea, nella zona delle Dieci Città.
+##### 14-16
 
-32-35 Gli presentarono un sordomuto, implorandogli di poggiare le mani
-su di lui per guarirlo. Gesù lo prese in disparte, lontano dalla folla,
-e gli mise le dita nelle orecchie, poi sputò e gli toccò la lingua.
-Infine, alzando lo sguardo verso il cielo, sospirò e ordinò “Apritevi!”
-Immediatamentente a quel signore gli si sturarono le orecchie e si
-sciolse la lingua.
+Poi Gesù invitò la folla ad avvicinarsi, e disse: “Gente! Ascoltatemi e cercate di capire! Non ci si contamina con quello che entra dentro, ma con quello che si tira fuori! Pensateci bene!”
 
-36-37 Gesù ordinò ai presenti di non raccontare l’episodio, ma più lo
-vietava, più ne parlavano. Erano talmente meravigliati per quello che
-Gesù aveva fatto, che esclamavano: “Fa sempre delle cose incredibili!
-Addirittura fa sentire i sordi e parlare i muti!”
+##### 17-19
 
-[<-indietro](Mc06.html) [avanti->](Mc08.html)
+Quando lasciò la folla ed entrò in casa, gli allievi gli chiesero maggiori spiegazioni. Gesù rispose: “Non lo capite neanche voi? Non capite che quello che mangiate non può contaminarvi? Il cibo non entra nel vostro cuore: passa dallo stomaco e finisce nella fogna.” (Gesù voleva dire che era permesso mangiare qualunque cibo) <sup><a href="#fn__4" id="fnt__4" class="fn_top">4)</a></sup>.
 
-###### Note
-[^0703]: Es 20:12; Deut 5:16
-[^0704]: Es 21:17; Lev 20:9
-[^0705]: nota dell’autore
+##### 20-23
+
+Poi aggiunse: “È quello che esce dalle persone che le contamina. Perché è dall’interno, dal cuore dell’individuo, che partono i pensieri cattivi, gli abusi sessuali, i furti, gli omicidi, il tradimento, l’insoddisfazione, la cattiveria, l’inganno, l’immoralità, l’invidia, la maldicenza, la superbia e tutte le follie. Sono tutte queste cattiverie che, uscendo dalla persona, la contaminano e la rendono impura!”
+
+#### Gesù e la fiducia della donna straniera
+
+##### 24
+
+Gesù partì dalla Galilea per dirigersi verso la zona di Tiro e Sidone e si fermò in una casa. Cercò di non farlo sapere a nessuno, ma non riuscì a passare inosservato.
+
+##### 25-26
+
+Subito, una signora che aveva una figlia posseduta da uno spirito del male e aveva sentito parlare di Gesù gli si avvicinò e si buttò ai suoi piedi, pregandolo di cacciare il demonio da sua figlia. La donna era straniera di origine sirofenicia.
+
+##### 27-30
+
+Gesù le disse: “Prima vengono i figli: non sta bene prendere il cibo dei bambini per buttarlo ai cani!”. Ma la donna rispose: “Signor Padrone, ha ragione, ma persino i cagnolini sotto il tavolo mangiano le briciole che cadono ai figli.” E Gesù: “Visto che insisti, vai e vedrai che lo spirito del male ha lasciato tua figlia”. Quando la signora arrivò a casa trovò la bambina sdraiata sul letto e il demonio se n’era andato.
+
+#### Il sordomuto
+
+##### 31
+
+Dalla zona di Tiro, Gesù passò per la città di Sidone e poi tornò verso il lago di Galilea, nella zona delle Dieci Città.
+
+##### 32-35
+
+Gli presentarono un sordomuto, implorandogli di poggiare le mani su di lui per guarirlo. Gesù lo prese in disparte, lontano dalla folla, e gli mise le dita nelle orecchie, poi sputò e gli toccò la lingua. Infine, alzando lo sguardo verso il cielo, sospirò e ordinò “Apritevi!” Immediatamentente a quel signore gli si sturarono le orecchie e si sciolse la lingua.
+
+##### 36-37
+
+Gesù ordinò ai presenti di non raccontare l’episodio, ma più lo vietava, più ne parlavano. Erano talmente meravigliati per quello che Gesù aveva fatto, che esclamavano: “Fa sempre delle cose incredibili! Addirittura fa sentire i sordi e parlare i muti!”
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Is 29:13
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> Es 20:12; Deut 5:16
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> Es 21:17; Lev 20:9
+
+<sup><a href="#fnt__4" id="fn__4" class="fn_bot">4)</a></sup> nota dell’autore
+
+
+------------------------------------------------------------------------
+[<-indietro](Mc06.html) [avanti ->](Mc08.html)
