--- a/pages/Mc08.md
+++ b/pages/Mc08.md
@@ -1,100 +1,82 @@
 ---
 layout: page
-title: Mc08
+title: Marco 8
 ---
 
-### Cibo per quattromila
-1-3 Di nuovo, in quel periodo, si radunò una folla immensa, e ancora una
-volta la gente rimase senza cibo. Gesù allora chiamò i suoi allievi:
-“Sono preoccupato per questa gente” disse, “è qui da tre giorni e non ha
-da mangiare. Se li mando a casa a stomaco vuoto si sentiranno male per
-strada perché arrivano anche da molto lontano.”
+[<-indietro](Mc07.html)  [avanti->](Mc09.html)
+ 
+ ------------------------------------------------------------------------
+ 
+#### Cibo per quattromila
 
-4-7 “E come si fa a trovare cibo per tutti in questo posto sperduto?”
-chiesero i discepoli. Gesù domandò: “Quanti pani avete?” “Sette”
-risposero. Gesù ordinò alla folla di sedersi per terra, prese i sette
-pani, ringraziò Dio, li spezzò e li diede ai suoi allievi che li
-distribuirono alla folla. Trovarono anche dei piccoli pesci, e Gesù
-ringrazio Dio anche per quelli, poi ordinò agli allievi di distribuirli.
+##### 1-3
 
-8-9 Così la folla di circa quattromila persone mangiò fino a saziarsi,
-dopo di che Gesù li rimandò a casa. Alla fine del pasto furono raccolti
-gli avanzi e si riempirono sette grossi cesti.
+Di nuovo, in quel periodo, si radunò una folla immensa, e ancora una volta la gente rimase senza cibo. Gesù allora chiamò i suoi allievi: “Sono preoccupato per questa gente” disse, “è qui da tre giorni e non ha da mangiare. Se li mando a casa a stomaco vuoto si sentiranno male per strada perché arrivano anche da molto lontano.”
 
-10 Subito dopo, Gesù salì sulla barca con i suoi allievi e andò verso la
-zona di Dalmanùta.
+##### 4-7
 
-11-12 Lo seguirono anche alcuni capi Ebrei con l’intento di discutere
-con lui. “Fai apparire un segno miracoloso in cielo” gli dissero,
-“Allora sì che ti crederemo!” Gesù sospirò e disse: “Perché questa gente
-chiede un miracolo?” Io assolutamente non vorrei fare alcun miracolo per
-loro!"
+“E come si fa a trovare cibo per tutti in questo posto sperduto?” chiesero gli allievi. Gesù domandò: “Quanti pani avete?” “Sette” risposero. Gesù ordinò alla folla di sedersi per terra, prese i sette pani, ringraziò Dio, li spezzò e li diede ai suoi allievi che li distribuirono alla folla. Trovarono anche dei piccoli pesci, e Gesù ringrazio Dio anche per quelli, poi ordinò agli allievi di distribuirli.
 
-13 Poi li lasciò, risalì in barca e se ne andò verso l’altra riva del
-lago.
+##### 8-9
 
-14 Ma gli allievi avevano dimenticato di fare scorta di pane prima della
-partenza, infatti in barca avevano solo una pagnotta. Mentre
-attraversavano il lago, Gesù, molto seriamente, disse: “State lontani
-dal lievito di Erode e dei Farisei!” I discepoli cominciarono a
-discutere fra di loro: “Dice così perché ci siamo dimenticati di portare
-il pane…”
+Così la folla di circa quattromila persone mangiò fino a saziarsi, dopo di che Gesù li rimandò a casa. Alla fine del pasto furono raccolti gli avanzi e si riempirono sette grossi cesti.
 
-17-21 Gesù si accorse di quello che dicevano ed esclamò: “Ma no! Il pane
-non c’entra! Possibile che non capite? Siete così insensibili? Come dice
-la Bibbia: *Avete occhi, ma non guardate! Avete orecchie, ma non ci
-sentite!* [^6] Avete dimenticato tutto? Quando ho sfamato cinquemila
-persone con cinque pezzi di pane, quante ceste di avanzi avete
-recuperato?” “Dodici” risposero gli allievi. E quando ho dato da
-mangiare a quattromila persone con sette pani quanto cibo avanzò?"
-“Sette ceste” risposero. “E ancora non avete capito?”
+##### 10
 
-### Il cieco di Betsaida
-22 Arrivati a Betsaida, alcune persone gli portarono un cieco,
-supplicando Gesù di toccarlo.
+Subito dopo, Gesù salì sulla barca con i suoi allievi e andò verso la zona di Dalmanùta.
 
-23-26 Gesù prese il cieco per mano e lo condusse fuori dal paese, poi
-con la saliva gli toccò gli occhi, gli appoggiò le mani sopra e gli
-chiese: “Riesci a vedere qualcosa?” Il tipo si guardò intorno. “Sì, vedo
-degli uomini - ma non li vedo bene: mi sembrano alberi che camminano!”.\
-Allora Gesù mise ancora le mani sugli occhi del cieco, che guardò di
-nuovo e scoprì di essere guarito e di vedere tutto chiaramente. Gesù lo
-rimandò direttamente a casa: “Non passare nemmeno dal paese” gli ordinò.
+##### 11-12
 
-### Chi è Gesù?
-27-28 Poi, insieme agli allievi, andò verso i paesi della zona di
-Cesarèa di Filippo. Per strada, chiese a loro: “Secondo la gente, chi
-sono io?” “Alcuni pensano che tu sia Giovanni il Battezzatore” risposero
-i discepoli. “Altri dicono che sei Elia o qualche altro profeta
-ritornato in vita”
+Lo seguirono anche alcuni capi Ebrei con l’intento di discutere con lui. “Fai apparire un segno miracoloso in cielo” gli dissero, “Allora sì che ti crederemo!” Gesù sospirò e disse: “Perché questa gente chiede un miracolo? Io assolutamente non vorrei fare alcun miracolo per loro!”
 
-29-30 Poi Gesù chiese: “E secondo voi, chi sono io?” Pietro rispose “Tu
-sei il [Prescelto di Dio](../master/glossario.txt "glossario: Cristo").”
-Allora Gesù ordinò a loro assolutamente di non dirlo a nessuno.
+##### 13
 
-31-33 Poi cominciò a confidargli che avrebbe sofferto molto, che sarebbe
-stato respinto dal senato dei religiosi, dai capi sacerdoti e dai
-professori di Mosè, che sarebbe stato ucciso e poi, dopo tre giorni,
-resuscitato. Siccome parlava molto apertamente con loro di queste cose,
-Pietro lo prese in disparte e cominciò a rimproverarlo. Allora Gesù si
-girò per guardare gli allievi e disse severamente a Pietro: “Stai
-lontano da me Satana! Tu non capisci le cose di Dio, solo le cose degli
-uomini”.
+Poi li lasciò, risalì in barca e se ne andò verso l’altra riva del lago.
 
-34-35 Poi radunò gli allievi e la folla e cominciò a spiegare: “Chi mi
-vuole seguire deve smettere di pensare a se stesso: prenda la sua croce
-e mi segua. Chi vuole salvare la sua vita la perderà; chi invece la
-sacrifica per me e per amore del mio messaggio la salverà.
+##### 14-16
 
-36-38 “A che serve guadagnare il mondo intero e poi perdere la propria
-vita? Con che cosa potete ricomprarla? Chiunque si vergogna di me e del
-mio messaggio davanti a questa società senza Dio e piena di colpe,
-sappia che anch’io, il [Prescelto di Dio](../master/glossario.txt "glossario: Cristo"), mi vergognerò di lui
-quando sarò nello splendore di mio Padre circondato dalla sua corte[^7].
+Ma gli allievi avevano dimenticato di fare scorta di pane prima della partenza, infatti in barca avevano solo una pagnotta. Mentre attraversavano il lago, Gesù, molto seriamente, disse: “State lontani dal lievito di Erode e dei Farisei!” I discepoli cominciarono a discutere fra di loro: “Dice così perché ci siamo dimenticati di portare il pane…”
 
-[<-indietro](Mc07.html) [avanti->](Mc09.html)
+##### 17-21
 
-###### Note
-[^6]: Geremia 5:21
-[^7]: letteralmente
-[angeli](../master/glossario.txt "glossario: angeli") consacrati a Dio.
+Gesù si accorse di quello che dicevano ed esclamò: “Ma no! Il pane non c’entra! Possibile che non capite? Siete così insensibili? Come dice la Bibbia: *Avete occhi, ma non guardate! Avete orecchie, ma non ci sentite!* <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup> Avete dimenticato tutto? Quando ho sfamato cinquemila persone con cinque pezzi di pane, quante ceste di avanzi avete recuperato?” “Dodici” risposero gli allievi. “E quando ho dato da mangiare a quattromila persone con sette pani quanto cibo avanzò?” “Sette ceste” risposero. “E ancora non avete capito?”
+
+#### Il cieco di Betsaida
+
+##### 22
+
+Arrivati a Betsaida, alcune persone gli portarono un cieco, supplicando Gesù di toccarlo.
+
+##### 23-26
+
+Gesù prese il cieco per mano e lo condusse fuori dal paese, poi con la saliva gli toccò gli occhi, gli appoggiò le mani e gli chiese: “Riesci a vedere qualcosa?” Il tipo si guardò intorno. “Sì, vedo degli uomini - ma non li vedo bene: mi sembrano alberi che camminano!” Allora Gesù mise ancora le mani sugli occhi del cieco, che guardò di nuovo e scoprì di essere guarito e di vedere tutto chiaramente. Gesù lo rimandò direttamente a casa: “Non passare nemmeno dal paese.” gli ordinò.
+
+#### Chi è Gesù?
+
+##### 27-28
+
+Poi, insieme agli allievi, andò verso i paesi della zona di Cesarèa di Filippo. Per strada, chiese a loro: “Secondo la gente, chi sono io?” “Alcuni pensano che tu sia Giovanni il Battezzatore” risposero i discepoli. “Altri dicono che sei Elia o qualche altro profeta ritornato in vita.”
+
+##### 29-30
+
+Poi Gesù chiese: “E secondo voi, chi sono io?” Pietro rispose “Tu sei il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Protagonista</a>.” Allora Gesù ordinò a loro assolutamente di non dirlo a nessuno.
+
+##### 31-33
+
+Poi cominciò a confidare a loro che avrebbe sofferto molto, che sarebbe stato respinto dal senato dei religiosi, dai capi sacerdoti e dagli esperti di Bibbia, che sarebbe stato ucciso e poi, dopo tre giorni, risuscitato. Siccome parlava molto apertamente con loro di queste cose, Pietro lo prese in disparte e cominciò a rimproverarlo. Allora Gesù si girò per guardare gli allievi e disse severamente a Pietro: “Stai lontano da me Satana! Tu non capisci le cose di Dio, solo le cose degli uomini.”
+
+##### 34-35
+
+Poi radunò gli allievi e la folla e cominciò a spiegare: “Chi mi vuole seguire deve smettere di pensare a se stesso: prenda la sua croce e mi segua. Chi vuole salvare la sua vita la perderà; chi invece la sacrifica per me e per amore del mio messaggio la salverà.”
+
+##### 36-38
+
+“A che serve guadagnare il mondo intero e poi perdere la propria vita? Con che cosa potete ricomprarla? Chiunque si vergogna di me e del mio messaggio davanti a questa società senza Dio e piena di colpe, sappia che anch’io, il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Protagonista</a>, mi vergognerò di lui quando sarò nello splendore di mio Padre circondato dalla sua corte<sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup>.”
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Geremia 5:21
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> letteralmente: <a href="http://www.pachialu.it/doku/doku.php?id=glossario#angelo" class="wikilink1" title="glossario">angeli</a> consacrati a Dio.
+
+
+------------------------------------------------------------------------
+[<-indietro](Mc07.html) [avanti ->](Mc09.html)
