--- a/pages/Mc04.md
+++ b/pages/Mc04.md
@@ -1,94 +1,76 @@
 ---
 layout: page
-title: Mc04
+title: Marco 4
 ---
 
-### Il seminatore
-1 Gesù riprese ad insegnare lungo il lago, ma fu circondato da una folla
-enorme. Era così pressato che dovette salire e sedersi dentro una barca
-in riva al lago, mentre la gente lo ascoltava dalla spiaggia.
+[<-indietro](Mc03.html)  [avanti->](Mc05.html)
+ 
+ ------------------------------------------------------------------------
+ 
+ #### Il seminatore
 
-2-9 Usando dei racconti, insegnava alla folla tante cose. Ad esempio,
-diceva: «Ascoltate questa. Un giorno un contadino uscì a seminare.
-Mentre lanciava i semi, una po’ di seme cadde lungo la strada e vennero
-gli uccelli e lo mangiarono. Un’altra parte cadde fra i sassi, dove non
-c’era molta terra, e spuntò subito perché il terreno era poco profondo.
-Poi si alzò il sole, la piantina si bruciò e, avendo poche radici, si
-seccò. Un’altra parte cadde tra i rovi che, crescendo, la soffocarono e
-non portò frutto. Ma altri semi caddero sulla terra buona, maturarono e
-portarono frutto, e produssero trenta, sessanta o cento volte tanto». E
-concluse: «A buon intenditor, poche parole!».
+##### 1
 
-10-12 Quando poi rimase da solo, i suoi e i
-[Dodici](../master/glossario.txt "discepoli, i dodici apostoli; glossario: discepoli")
-gli chiedevano spiegazioni sui racconti. Disse: «Vi ho rivelato il
-mistero del governo di Dio; a quelli di fuori invece gli si racconta
-tutto in metafore, così: “guardano, ma non vedono, ascoltano, ma non
-capiscono, in modo che non cambino vita e siano perdonati”».
+Gesù riprese ad insegnare lungo il lago, ma fu circondato da una folla enorme. Era così pressato che dovette salire e sedersi dentro una barca in riva al lago, mentre la gente lo ascoltava dalla spiaggia.
 
-13 Continuò dicendo: «Se non capite questo racconto, come farete a
-capire tutti gli altri racconti?
+##### 2-9
 
-14-17 Il contadino semina il messaggio. Quelli lungo la strada sono le
-persone che ricevono il messaggio, ma quando l’hanno ascoltato, subito
-viene il Capo del Male, e porta via il messaggio seminato in loro. Allo
-stesso modo, quelli che ricevono il seme sulle pietre sono quelli che,
-quando ascoltano il messaggio, subito l’accolgono e sono contenti, ma
-non hanno radici salde, sono instabili e quindi, appena arriva qualche
-difficoltà o persecuzione per colpa del messaggio, subito si
-scoraggiano.
+Usando dei racconti, insegnava alla folla tante cose. Ad esempio, diceva: “Sentite questa. Un giorno un contadino uscì a seminare. Mentre lanciava i semi, una po’ di seme cadde lungo la strada e vennero gli uccelli e lo mangiarono. Un’altra parte cadde fra i sassi, dove non c’era molta terra, e spuntò subito perché il terreno era poco profondo. Quando si alzò il sole, si bruciò e, avendo poche radici, si seccò. Un’altra parte cadde tra i rovi che, crescendo, la soffocarono e non portò frutto. Ma altri semi caddero sulla terra buona, maturarono e portarono frutto, e produssero trenta, sessanta o cento volte tanto”. E concluse: “A buon intenditor, poche parole!”
 
-18-20 Poi ci sono quelli che ricevono il seme tra i rovi: sono quelli
-che hanno ascoltato il messaggio, ma arrivano i problemi della vita e
-l’abbaglio della ricchezza e tutte le altre insoddisfazioni e il
-messaggio viene soffocato e rimane sterile. Quelli invece che ricevono
-il seme su terreno fertile, sono quelli che ascoltano il messaggio, lo
-vivono personalmente e portano frutto trenta, sessanta, o cento volte
-tanto»
+##### 10-12
 
-### Altri racconti
-21-23 Poi disse: “Ma voi accendete la luce e poi la coprite? Montate i
-lampadari sotto il letto o sul soffitto? Sappiate che le cose nascoste
-vengono alla luce, e i segreti allo scoperto. Chi vuole capire,
-capisca.”
+Quando poi rimase da solo, i suoi e i <a href="http://www.pachialu.it/doku/doku.php?id=glossario#discepoli" class="wikilink1" title="glossario">Dodici</a> gli chiedevano spiegazioni sui racconti. Disse: “A voi ho rivelato il mistero del governo di Dio; agli altri invece gli si racconta tutto in metafore, così: *guardano, ma non vedono, ascoltano, ma non capiscono, in modo che non cambino vita e siano perdonati*<sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>”.
 
-24-25 E ancora: “Ascoltate bene: con la misura che usate, vi verrà
-misurato, e anzi, rincareranno la dose. A quelli che hanno, gli daranno
-di più, e a quelli che non hanno, gli toglieranno anche quel poco che
-avevano.”
+##### 13
 
-26-29 Continuò dicendo: “Il governo di Dio è come uno che semina un
-terreno. Va a dormire, poi si sveglia e giorno dopo giorno i semi
-germogliano e crescono. Il terreno, da solo, produce prima la foglia,
-poi la spiga e alla fine i chicchi maturi. Ma quando il grano è maturo,
-il contadino subito lo taglia e lo porta a casa, perché è la stagione
-del raccolto.”
+Continuò dicendo: “Se non capite questa storia, come farete a capire tutte le altre?”
 
-30-32 E raccontò: “A che cosa possiamo paragonare il governo di Dio? Che
-immagine possiamo usare? È come un seme minuscolo, come i semini di
-mostarda, che quasi non si vedono, ma poi germogliano e crescono e
-superano tutte le piante dell’orto, tanto che fanno dei rami che gli
-uccelli usano per fare il nido.”
+##### 14-17
 
-33-34 Con questi e molti altri racconti trasmetteva il messaggio, fin
-dove erano in grado di capire. Con gli altri parlava solo per storielle,
-ma ai suoi allievi spiegava tutto in privato.
+“Il contadino semina il messaggio. Quelli lungo la strada sono le persone che ricevono il messaggio, ma quando l’hanno ascoltato, subito viene il Capo del Male, e porta via il messaggio seminato in loro. Allo stesso modo, quelli che ricevono il seme sulle pietre sono quelli che, quando ascoltano il messaggio, subito l’accolgono e sono contenti, ma non hanno radici salde, sono instabili e quindi, appena arriva qualche difficoltà o persecuzione per colpa del messaggio, subito si scoraggiano.
 
-### Gesù calma la tempesta
-35-36 Lo stesso giorno, al tramonto, disse agli allievi: “Andiamo
-all’altra riva.” Lasciando indietro la folla, lo accompagnarono in
-barca, così com’era, insieme ad altre barche.
+##### 18-20
 
-37-38 A un certo punto, si alzò un vento esagerato e delle onde enormi,
-e iniziavano a imbarcare acqua. Ma Gesù stava dormendo a poppa su un
-cuscino. Gli allievi lo svegliarono gridando: “Professore, non ti
-interessa che stiamo tutti per annegare?”
+Poi ci sono quelli che ricevono il seme tra i rovi: sono quelli che hanno ascoltato il messaggio, ma arrivano i problemi della vita e l’abbaglio della ricchezza e tutte le altre insoddisfazioni e il messaggio viene soffocato e rimane sterile. Quelli invece che ricevono il seme su terreno fertile, sono quelli che ascoltano il messaggio, lo vivono personalmente e portano frutto trenta, sessanta, o cento volte tanto“
 
-39-41 Gesù si sveglio e sgridò il vento e disse al lago: “Silenzio!
-Calmati!”. Il vento scomparve e si fece calma piatta. E rivolgendosi
-agli allievi: “Perché eravate così spaventati? Non vi fidate ancora?”
-Gli allievi erano terrorizzati, e dicevano fra di loro: “Ma chi è questo
-qua? Perfino il vento e le onde gli ubbidiscono!”
+#### Altri racconti
+
+##### 21-23
+
+Poi disse: “Ma voi accendete la luce e poi la coprite? Montate i lampadari sotto il letto o sul soffitto? Sappiate che le cose nascoste vengono alla luce, e i segreti allo scoperto. Chi vuole capire, capisca.”
+
+##### 24-25
+
+E ancora: “Ascoltate bene: con la misura che usate, vi verrà misurato, e anzi, rincareranno la dose. A quelli che hanno, gli daranno di più, e a quelli che non hanno, gli toglieranno anche quel poco che avevano.”
+
+##### 26-29
+
+Continuò dicendo: “Il governo di Dio è come uno che semina un terreno. Va a dormire, poi si sveglia e giorno dopo giorno i semi germogliano e crescono. Il terreno, da solo, produce prima la foglia, poi la spiga e alla fine i chicchi maturi. Ma quando il grano è maturo, il contadino subito lo taglia e lo porta a casa, perché è la stagione del raccolto.”
+
+##### 30-32
+
+E raccontò: “A che cosa possiamo paragonare il governo di Dio? Che immagine possiamo usare? È come un seme minuscolo, come i semini di mostarda, che quasi non si vedono, ma poi germogliano e crescono e superano tutte le piante dell’orto, tanto che producono dei rami usati dagli uccelli per fare il nido.”
+
+##### 33-34
+
+Con questi e molti altri racconti trasmetteva il messaggio, fin dove erano in grado di capire. Con gli altri parlava solo per storielle, ma ai suoi allievi spiegava tutto in privato.
+
+#### Gesù calma la tempesta
+
+##### 35-36
+
+Lo stesso giorno, al tramonto, disse agli allievi: “Andiamo all’altra riva.” Lasciando indietro la folla, lo accompagnarono in barca, così com’era, insieme ad altre barche.
+
+##### 37-38
+
+A un certo punto, si alzò un vento esagerato e delle onde enormi, e iniziavano a imbarcare acqua. Ma Gesù stava dormendo a poppa su un cuscino. Gli allievi lo svegliarono gridando: “Professore, non ti interessa che stiamo tutti per annegare?”
+
+##### 39-41
+
+Gesù si sveglio e sgridò il vento e disse al lago: “Silenzio! Calmati!”. Il vento scomparve e si fece calma piatta. E rivolgendosi agli allievi: “Perché eravate così spaventati? Non vi fidate ancora?” Gli allievi erano terrorizzati, e dicevano fra di loro: “Ma chi è questo qua? Perfino il vento e le onde gli ubbidiscono!”
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Is 6:9-10
 
 
-[<-indietro](Mc03.html) [avanti->](Mc05.html)
+------------------------------------------------------------------------
+[<-indietro](Mc03.html) [avanti ->](Mc05.html)
