--- a/pages/Mc05.md
+++ b/pages/Mc05.md
@@ -1,105 +1,80 @@
 ---
 layout: page
-title: Mc05
+title: Marco 5
 ---
 
-### L’indemoniato
-1-2 Arrivarono all’altra riva del lago, nella regione dei Geraseni. Gesù
-era appena sceso dalla barca, quando improvvisamente gli corse incontro
-un indemoniato che veniva dal cimitero.
+[<-indietro](Mc04.html)  [avanti->](Mc06.html)
+ 
+ ------------------------------------------------------------------------
+ 
+#### L’indemoniato
 
-3-5 Questo personaggio viveva tra le tombe ed era così forte che non si
-riusciva a tenerlo legato: succedeva spesso che lo legavano o lo
-incatenavano, ma lui riusciva a rompere le catene e scappare. Nessuno
-riusciva a tenerlo. Giorno e notte vagava tra le tombe e su e giù per le
-colline, urlando e ferendosi con le pietre.
+##### 1-2
 
-6 Mentre Gesù era ancora lontano, il tipo l’aveva visto e gli era corso
-incontro. Gli arrivò vicino e si buttò a terra davanti a lui.
+Arrivarono all’altra riva del lago, nella regione dei Geraseni. Gesù era appena sceso dalla barca, quando improvvisamente gli corse incontro un indemoniato che veniva dal cimitero.
 
-7-8 Allora Gesù parlò allo spirito che era dentro l’indemoniato dicendo:
-“Esci, spirito del male!”. Lo spirito cacciò un urlo terribile: “Che
-vuoi da me Gesù, Figlio del Dio Potentissimo: ti prego, non torturarmi!”
+##### 3-5
 
-9-10 Poi Gesù chiese: “Come ti chiami?” e lo spirito gli rispose:
-“Esercito, perché siamo in tanti”. Allora gli spiriti lo pregarono di
-non mandarli troppo lontano.
+Questo personaggio viveva tra le tombe ed era così forte che non si riusciva a tenerlo legato: succedeva spesso che lo legavano o lo incatenavano, ma lui riusciva a rompere le catene e scappare. Nessuno riusciva a tenerlo. Giorno e notte vagava tra le tombe e su e giù per le colline, urlando e ferendosi con le pietre.
 
-11-12 Nelle vicinanze c’era un grosso branco di maiali che pascolavano
-sulla collina sopra il lago. Gli spiriti lo supplicarono: “Mandaci in
-quei maiali!”.
+##### 6
 
-13 Gesù acconsentì: gli spiriti del male uscirono dal quel signore ed
-entrarono nei maiali. Tutto il branco si buttò a capofitto nel lago e
-annegò. Morirono circa duemila maiali!
+Mentre Gesù era ancora lontano, il tipo l’aveva visto e gli era corso incontro. Gli arrivò vicino e si buttò a terra davanti a lui.
 
-14 I guardiani dei maiali corsero in città e nelle campagne della zona a
-raccontare la notizia. La gente arrivò di corsa per vedere di persona
-cosa era successo.
+##### 7-10
 
-15-16 Quando arrivarono a Gesù, e videro l’ex-indemoniato seduto
-normalmente, vestito e completamente sano di mente, si spaventarono.
-Intanto, quelli che avevano assistito in diretta continuavano a
-raccontarlo.
+Allora Gesù parlò allo spirito che era dentro l’indemoniato dicendo: “Esci, spirito del male!” Lo spirito cacciò un urlo terribile: “Che vuoi da me Gesù, Figlio del Dio Potentissimo: ti prego, non torturarmi!” Poi Gesù chiese: “Come ti chiami?” e lo spirito gli rispose: “Battaglione, perché siamo in tanti”. Allora gli spiriti lo pregarono di non mandarli troppo lontano.
 
-17-19 La folla cominciò a pregarlo di andare via e così Gesù ritornò in
-barca. Il tipo esorcizzato invece, voleva a tutti i costi seguirlo, ma
-Gesù glielo vietò. “Vai a casa tua” gli ordinò, “e racconta agli altri
-tutto quello che Dio ha fatto per te, e come ti è venuto incontro!”
+##### 11-13
 
-20 Così quel signore se ne andò, e cominciò ad raccontare in tutta la
-zona delle Dieci Città le cose stupende che Gesù aveva fatto per lui, e
-tutti rimanevano sconvolti.
+Nelle vicinanze c’era un grosso branco di maiali che pascolavano sulla collina sopra il lago. Gli spiriti lo supplicarono: “Mandaci in quei maiali!” Gesù acconsentì: gli spiriti del male uscirono dal quel signore ed entrarono nei maiali. Tutto il branco si buttò a capofitto nel lago e annegò. Morirono circa duemila maiali!
 
-### Gesù risuscita una ragazza e guarisce una signora
-21-24 Quando Gesù arrivò all’altra riva del lago in barca, fu circondato
-da una folla immensa. Improvvisamente arrivò un capo di sinagoga, di
-nome Iairo che si avvicinò e si buttò ai piedi di Gesù, implorandolo di
-guarire la sua bimba. “Sta per morire, ti prego vieni ad appoggiare le
-tue mani su di lei, e sarà guarita.” Gesù andò con quel signore e la
-folla lo seguiva e lo stringeva da tutte le parti.
+##### 14-16
 
-25-26 Tra la gente c’era una donna che da dodici anni soffriva di una
-emorraggia. La poveretta aveva sofferto molto in questi anni, passando
-di medico in medico, spendendo tutto quello che aveva. Ma invece di
-migliorare, peggiorava sempre.
+I guardiani dei maiali corsero in città e nelle campagne della zona a raccontare la notizia. La gente arrivò di corsa per vedere di persona cosa era successo. Quando arrivarono a Gesù, e videro l’ex-indemoniato seduto normalmente, vestito e completamente sano di mente, si spaventarono. Intanto, quelli che avevano assistito in diretta continuavano a raccontarlo.
 
-27-29 Avendo sentito parlare dei miracoli di Gesù, gli si avvicinò da
-dietro, in mezzo alla folla, e gli toccò il vestito, pensando: “Se
-riesco anche solo a toccargli il vestito, sarò guarita!”. Fu proprio
-così: appena lo toccò, l’emorraggia si fermò e la donna capì di essere
-guarita.
+##### 17-19
 
-30-34 Gesù si accorse subito dell’evento soprannaturale, e rivolgendosi
-alla folla, chiese: “Chi mi ha toccato i vestiti?”. I suoi allievi
-commentarono: “Con tutta la gente che ci stringe, ci vieni a chiedere
-chi ti ha toccato?”. Ma Gesù continuava a guardarsi intorno per capire
-chi era stato. Allora quella donna, tremante e impaurita per quello che
-le era successo, venne avanti e si buttò ai suoi piedi confessando
-l’accaduto. Allora Gesù le disse: “Cara, la tua fiducia ti ha salvato,
-stai tranquilla e goditi la guarigione!”
+La folla cominciò a pregarlo di andare via e così Gesù ritornò in barca. Il tipo esorcizzato invece, voleva a tutti i costi seguirlo, ma Gesù glielo vietò. “Vai a casa tua” gli ordinò, “e racconta agli altri tutto quello che Dio ha fatto per te, e come ti è venuto incontro!”
 
-35-36 Mentre Gesù stava ancora parlando, arrivarono delle persone dalla
-casa del capo della sinagoga con la notizia che ormai la bambina era
-morta e non c’era motivo di disturbare il Professore. Ma Gesù sentì i
-loro discorsi e disse a Iairo: “Non ti preoccupare. Devi fidarti solo di
-me.”
+##### 20
 
-37-39 Poi permise solo a Pietro, Giacomo e suo fratello Giovanni di
-accompagnarlo. Quando arrivarono a casa di Iario, Gesù vide una grande
-confusione: tutti piangevano e urlavano. A questo punto entrò e disse ai
-presenti: “Perché piangete e gridate? La bambina non è morta, sta solo
-dormendo!”
+Così quel signore se ne andò, e cominciò ad raccontare in tutta la zona delle Dieci Città le cose stupende che Gesù aveva fatto per lui, e tutti rimanevano sconvolti.
 
-40-42 Ma quelli lo prendevano per pazzo. Allora Gesù li fece uscire, si
-fece accompagnare dai genitori e i tre allievi ed entrò nella stanzetta
-della bambina.\
-Le prese la mano e le disse nella sua lingua: “Ragazzina, alzati!”
-(aveva dodici anni). La ragazza si alzò subito in piedi e cominciò a
-camminare, mentre i genitori facevano salti di gioia.
+#### Gesù risuscita una ragazza e guarisce una signora
 
-43 Gesù ordinò ai genitori di non raccontare niente a nessuno, e suggerì
-di dare alla ragazza qualcosa da mangiare.
+##### 21-24
+
+Quando Gesù arrivò all’altra riva del lago in barca, fu circondato da una folla immensa. Improvvisamente arrivò un capo di sinagoga, di nome Iairo che si avvicinò e si buttò ai piedi di Gesù, implorandolo di guarire la sua bimba. “Sta per morire, ti prego vieni ad appoggiare le tue mani su di lei, e sarà guarita.” Gesù andò con quel signore e la folla lo seguiva e lo stringeva da tutte le parti.
+
+##### 25-26
+
+Tra la gente c’era una donna che da dodici anni soffriva di un’emorraggia. La poveretta aveva sofferto molto in questi anni, passando di medico in medico, spendendo tutto quello che aveva. Ma invece di migliorare, peggiorava sempre.
+
+##### 27-29
+
+Avendo sentito parlare dei miracoli di Gesù, gli si avvicinò da dietro, in mezzo alla folla, e gli toccò il vestito, pensando: “Se riesco anche solo a toccargli il vestito, sarò guarita!” Fu proprio così: appena lo toccò, l’emorraggia si fermò e la donna capì di essere guarita.
+
+##### 30-34
+
+Gesù si accorse subito dell’evento soprannaturale, e rivolgendosi alla folla, chiese: “Chi mi ha toccato i vestiti?” I suoi allievi commentarono: “Con tutta la gente che ci stringe, ci vieni a chiedere chi ti ha toccato?” Ma Gesù continuava a guardarsi intorno per capire chi era stato. Allora quella donna, tremante e impaurita per quello che le era successo, venne avanti e si buttò ai suoi piedi confessando l’accaduto. Allora Gesù le disse: “Cara, la tua fiducia ti ha salvato, stai tranquilla e goditi la guarigione!”
+
+##### 35-36
+
+Mentre Gesù stava ancora parlando, arrivarono delle persone dalla casa del capo della sinagoga con la notizia che ormai la bambina era morta e non c’era motivo di disturbare il Professore. Ma Gesù sentì i loro discorsi e disse a Iairo: “Non ti preoccupare. Devi fidarti solo di me.”
+
+##### 37-39
+
+Poi permise solo a Pietro, Giacomo e suo fratello Giovanni di accompagnarlo. Quando arrivarono a casa di Iario, Gesù trovò una grande confusione: tutti piangevano e urlavano. A questo punto entrò e disse ai presenti: “Perché piangete e gridate? La bambina non è morta, sta solo dormendo!”
+
+##### 40-42
+
+Ma quelli lo prendevano per pazzo. Allora Gesù li fece uscire, si fece accompagnare dai genitori e dai tre allievi ed entrò nella stanzetta della bambina. Le prese la mano e le disse nella sua lingua: “Ragazzina, alzati!” (aveva dodici anni). La ragazza si alzò subito in piedi e cominciò a camminare, mentre i genitori facevano salti di gioia.
+
+##### 43
+
+Gesù ordinò ai genitori di non raccontare niente a nessuno, e suggerì di dare alla ragazza qualcosa da mangiare.
 
 
-[<-indietro](Mc04.html) [avanti->](Mc06.html)
+------------------------------------------------------------------------
+[<-indietro](Mc04.html) [avanti ->](Mc06.html)
