--- a/pages/Mc06.md
+++ b/pages/Mc06.md
@@ -1,158 +1,140 @@
 ---
 layout: page
-title: Mc06
+title: Marco 6
 ---
 
-### Gesù rifiutato a casa sua
-1 Poi Gesù se ne andò da quella zona e tornò con gli allievi al paese
-dove era cresciuto (Nazaret).
+[<-indietro](Mc05.html)  [avanti->](Mc07.html)
+ 
+ ------------------------------------------------------------------------
+ 
+#### Gesù rifiutato a casa sua
 
-2-3 Nel giorno del riposo si mise ad insegnare nella sinagoga. I
-presenti rimasero sconvolti e commentavano: “Chi si crede di essere?
-Cos’è questa scienza improvvisa? Come gli vengono questi miracoli? Si è
-dimenticato di essere il carpentiere, figlio di Maria e fratello di
-Giacomo, Giuseppe, Giuda e Simone? Le sue sorelle sono ancora qui in
-paese!” E prendevano le distanze.
+##### 1
 
-4 Ma Gesù disse: “Un profeta è rispettato dappertutto, tranne che nel
-suo paese, tra i suoi parenti e a casa sua.”
+Poi Gesù se ne andò da quella zona e tornò con gli allievi al paese dove era cresciuto (Nazaret).
 
-5-6 Siccome non gli davano fiducia, Gesù non poteva fare grandi miracoli
-tra di loro, tranne qualche guarigione di malati, su cui poggiò le mani.
-Rimase sorpreso che non si fidavano di lui e cominciò a girare nei paesi
-vicini, insegnando alla gente.
+##### 2-3
 
-### I dodici in missione
-6-11 Un giorno, raccolse i dodici allievi e iniziò a inviarli in
-missione, in coppia, autorizzandoli a cacciare gli spiriti del male. Per
-il viaggio, disse di portarsi solo un bastone e non provviste o borse o
-soldi. “Portatevi i sandali, ma nessun vestito di ricambio” E ancora:
-“Quando arrivate, e vi fermate a casa di qualcuno, stateci fino alla
-vostra partenza. E se in qualche posto non vi accolgono e non vi
-ascoltano, quando ripartite, scrollatevi la polvere dai piedi. Questo
-gesto sarà un avvertimento per loro.”
+Nel giorno del riposo si mise ad insegnare nella sinagoga. I presenti rimasero sconvolti e commentavano: “Chi si crede di essere? Cos’è questa scienza improvvisa? Come gli vengono questi miracoli? Si è dimenticato di essere il carpentiere, figlio di Maria e fratello di Giacomo, Giuseppe, Giuda e Simone? Le sue sorelle sono ancora qui in paese!” E prendevano le distanze.
 
-12-13 Gli allievi partirono, invitando tutti quelli che incontravano a
-cambiare vita. Cacciarono anche molti spiriti del male, e guarirono
-molti malati, con il rito di bagnarli con olio.
+##### 4
 
-### Muore Giovanni il Battezzatore
-14-15 Ben presto il re Erode venne a sapere di Gesù, perché si parlava
-di lui dappertutto. Alcuni pensavano che fosse Giovanni il Battezzatore
-ritornato in vita. E la gente diceva: “Per forza fa quelle cose
-incredibili.” Altri dicevano che Gesù era la reincarnazione di Elia il
-messaggero di Dio dei tempi antichi, e altri ancora che fosse un
-messaggero nuovo, come i grandi del passato.
+Ma Gesù disse: “Un profeta è rispettato dappertutto, tranne che nel suo paese, tra i suoi parenti e a casa sua.”
 
-16 Quando ne sentì parlare, Erode era sicuro che fosse Giovanni. Diceva:
-“È quello che ho fatto decapitare: è tornato dai morti!”
+##### 5-6
 
-17-18 Infatti Erode aveva fatto arrestare e imprigionare Giovanni, per
-via di Erodiade, la moglie di suo fratello Filippo che lui aveva
-sposato. Giovanni diceva ad Erode: “Dio non vuole che ti metti con la
-moglie di tuo fratello”.
+Siccome non gli davano fiducia, Gesù non poteva fare grandi miracoli tra di loro, tranne qualche guarigione di malati, su cui poggiò le mani. Rimase sorpreso che non si fidavano di lui e cominciò a girare nei paesi vicini, insegnando alla gente.
 
-19-20 Erodiade odiava Giovanni e l’avrebbe ammazzato subito, ma senza
-l’autorizzazione del re non poteva. Erode era intimorito da Giovanni,
-sapendo che era buono e consacrato a Dio, e lo proteggeva. Ogni volta
-che parlava con Giovanni, Erode ci stava male, ma lo stesso voleva
-ascolarlo.
+#### I dodici in missione
 
-21 Un giorno venne l’occasione che Erodiade aspettava. Era il compleanno
-di Erode, che organizzò una festa, invitando i consiglieri di palazzo,
-gli ufficiali dell’esercito e i VIP della Galilea.
+##### 6-11
 
-22-23 Ad un certo punto entrò la figlia di Erodiade e si esibì in un
-balletto che fece impazzire gli invitati. “Chiedimi quello che vuoi!”
-esclamò il re, “Per te, anche mezzo regno!”
+Un giorno, raccolse i dodici allievi e iniziò a inviarli in missione, in coppia, autorizzandoli a cacciare gli spiriti del male. Per il viaggio, disse di portarsi solo un bastone e non provviste o borse o soldi. “Portatevi i sandali, ma nessun vestito di ricambio.” E ancora: “Quando arrivate, e vi fermate a casa di qualcuno, stateci fino alla vostra partenza. E se in qualche posto non vi accolgono e non vi ascoltano, quando ripartite, scrollatevi la polvere dai piedi. Questo gesto sarà un avvertimento per loro.”
 
-24-25 La ragazza uscì per consultarsi con la madre. “Cosa gli chiedo?”
-le domandò. E la madre: “Chiedigli la testa di Giovanni il
-Battezzatore!” Così lei corse dal re e ripetè: “Voglio la testa di
-Giovanni il Battezzatore! Adesso, su un vassoio!”
+##### 12-13
 
-26-28 Allora il re si pentì, ma non poteva tirarsi indietro davanti a
-tutti gli invitati. Mandò una guardia alla prigione per tagliare la
-testa di Giovanni e portargliela. Il soldato uccise Giovanni lì sul
-posto, e riportò la testa su un vassoio che diede alla ragazza. Lei, a
-sua volta, lo portò alla madre.
+Gli allievi partirono, invitando tutti quelli che incontravano a cambiare vita. Cacciarono anche molti spiriti del male, e guarirono molti malati, con il rito di bagnarli con olio.
 
-29 Quando lo vennero a sapere i seguaci di Giovanni, andarono a ritirare
-il suo corpo e lo seppellirono in una tomba.
+#### Muore Giovanni il Battezzatore
 
-### Cibo per cinquemila persone
-30 Gli
-[allievi](../master/glossario.txt "apostoli o testimoni; glossario: apostolo"),
-rientrando dal loro giro, si presentarono a Gesù e gli raccontarono
-quello che avevano fatto e insegnato.
+##### 14-15
 
-31 Gesù allora suggerì: “Venite con me in un posto tranquillo a
-riposarvi un po’”, perché c’era un viavai di gente tale da non riuscire
-nemmeno a trovare il tempo per mangiare.
+Ben presto il re Erode venne a sapere di Gesù, perché si parlava di lui dappertutto. Alcuni pensavano che fosse Giovanni il Battezzatore ritornato in vita. E la gente diceva: “Per forza fa quelle cose incredibili.” Altri dicevano che Gesù era la reincarnazione di Elia il messaggero di Dio dei tempi antichi, e altri ancora che fosse un messaggero nuovo, come i grandi del passato.
 
-32-33 E così partirono in barca, soli, verso un posto isolato. Molta
-gente però li aveva visti partire e li aveva riconosciuti. Tanti di loro
-li raggiunsero, a piedi, dai paesi vicini e arrivarono perfino prima di
-loro.
+##### 16
 
-34 Quando scesero dalla barca, si trovarono una folla enorme che li
-aspettava. Gesù ebbe pietà di loro perché sembravano pecore senza
-pastore e si mise ad insegnargli molte cose.
+Quando ne sentì parlare, Erode era sicuro che fosse Giovanni. Diceva: “È quello che ho fatto decapitare: è tornato dai morti!”
 
-35-36 Nel tardo pomeriggio, i discepoli gli dissero: “Manda la folla nei
-paesi vicini o dai contadini a comprarsi del cibo, perché non c’è niente
-da mangiare in questo posto sperduto e si sta facendo tardi.”
+##### 17-18
 
-37 Ma Gesù rispose: “Pensateci voi a dargli da mangiare!”. “E come?”
-chiesero i discepoli. “Ci vorrebbe un capitale per comprare da mangiare
-a tutta questa gente!”
+Infatti Erode aveva fatto arrestare e imprigionare Giovanni, per via di Erodiade, la moglie di suo fratello Filippo che lui aveva sposato. Giovanni diceva ad Erode: “Dio non vuole che ti metti con la moglie di tuo fratello”.
 
-38 “Quanto pane avete?” chiese Gesù, “Andate a vedere!”. Gli allievi
-tornarono dicendo che avevano solo cinque pagnotte e due pesci.
+##### 19-20
 
-39-40 Allora Gesù ordinò alla folla di sedersi a gruppi sull’erba e in
-breve si formarono gruppi di cinquanta e cento persone.
+Erodiade odiava Giovanni e l’avrebbe ammazzato subito, ma senza l’autorizzazione del re non poteva. Erode era intimorito da Giovanni, sapendo che era buono e consacrato a Dio, e lo proteggeva. Ogni volta che parlava con Giovanni, Erode ci stava male, ma lo stesso voleva ascolarlo.
 
-41 Gesù prese le cinque pagnotte e i due pesci e alzando lo sguardo
-verso il cielo fece una preghiera di benedizione per quel cibo.
+##### 21
 
-42 Poi cominciò a rompere le pagnotte dandole ai discepoli da
-distribuire alla folla. Fece lo stesso con i pesci. E la folla mangiò a
-sazietà.
+Un giorno venne l’occasione che Erodiade aspettava. Era il compleanno di Erode, che organizzò una festa, invitando i consiglieri di palazzo, gli ufficiali dell’esercito e i VIP della Galilea.
 
-43-44 Quella volta mangiarono circa cinquemila persone e alla fine si
-raccolsero dodici ceste di avanzi.
+##### 22-23
 
-### Gesù cammmina sull’acqua
-45-46 Subito dopo, Gesù fece risalire i suoi allievi sulla barca, e gli
-ordinò di attraversare il lago in direzione di Betsaida, dove li avrebbe
-raggiunti. Voleva rimanere ancora un po’ per salutare la gente che
-tornava a casa. Poi Gesù salì sulle colline a pregare.
+Ad un certo punto entrò la figlia di Erodiade e si esibì in un balletto che fece impazzire gli invitati. “Chiedimi quello che vuoi!” esclamò il re, “Per te, anche mezzo regno!”
 
-47 Quando si fece notte, i discepoli si trovavano in mezzo al lago,
-mentre Gesù era rimasto a terra.
+##### 24-25
 
-48-49 Gesù si accorse che i suoi allievi erano in difficoltà e facevano
-fatica a remare contro vento. Verso le quattro di mattina, Gesù andò
-incontro a loro, camminando sull’acqua. Stava per superarli quando lo
-avvistarono e si misero ad urlare di paura, scambiandolo per un
-fantasma.
+La ragazza uscì per consultarsi con la madre. “Cosa gli chiedo?” le domandò. E la madre: “Chiedigli la testa di Giovanni il Battezzatore!” Così lei corse dal re e ripetè: “Voglio la testa di Giovanni il Battezzatore! Adesso, su un vassoio!”
 
-50-52 Gesù però, si fece subito riconoscere, dicendo: “Tranquilli! Sono
-io! Non vi spaventate!” Salì sulla barca e il ventò si fermò. Gli
-allievi rimasero a bocca aperta, perché non avevano capito il miracolo
-della moltiplicazione del pane. Anzi, avevano grosse difficoltà a
-seguirlo.
+##### 26-28
 
-### Malati guariti a Gennesaret
-53-55 Arrivati a Gennesaret, sull’altra riva, gettarono l’àncora e
-scesero a terra. Le persone riconobbero subito Gesù e fecero correre la
-voce. Dovunque andava, gli portavano malati in barella.
+Allora il re si pentì, ma non poteva tirarsi indietro davanti a tutti gli invitati. Mandò una guardia alla prigione per tagliare la testa di Giovanni e portargliela. Il soldato uccise Giovanni lì sul posto, e riportò la testa su un vassoio che diede alla ragazza. Lei, a sua volta, lo portò alla madre.
 
-56 In tutti i posti dove si presentava, nei paesi, nelle città, in
-campagna, gli portavano i malati nelle piazze e lo imploravano di
-lasciargli toccare almeno l’orlo dei suoi vestiti. E tutti quelli che lo
-toccavano venivano guariti.
+##### 29
+
+Quando lo vennero a sapere i seguaci di Giovanni, andarono a ritirare il suo corpo e lo seppellirono in una tomba.
+
+#### Cibo per cinquemila persone
+
+##### 30
+
+Gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#apostolo" class="wikilink1" title="glossario">allievi</a>, rientrando dal loro giro, si presentarono a Gesù e gli raccontarono quello che avevano fatto e insegnato.
+
+##### 31
+
+Gesù allora suggerì: “Venite con me in un posto tranquillo a riposarvi un po’”, perché c’era un tale viavai di gente da non riuscire nemmeno a trovare il tempo per mangiare.
+
+##### 32-34
+
+E così partirono in barca, soli, verso un posto isolato. Molta gente però li aveva visti partire e li aveva riconosciuti. Tanti di loro li raggiunsero, a piedi, dai paesi vicini e arrivarono perfino prima di loro. Quando scesero dalla barca, si trovarono una folla enorme che li aspettava. Gesù ebbe pietà di loro perché sembravano pecore senza pastore e si mise ad insegnargli molte cose.
+
+##### 35-37
+
+Nel tardo pomeriggio, i discepoli gli dissero: “Manda la folla nei paesi vicini o dai contadini a comprarsi del cibo, perché non c’è niente da mangiare in questo posto sperduto e si sta facendo tardi.” Ma Gesù rispose: “Pensateci voi a dargli da mangiare!” “E come?” chiesero i discepoli. “Ci vorrebbe un capitale per comprare da mangiare a tutta questa gente!”
+
+##### 38
+
+“Quanto pane avete?” chiese Gesù, “Andate a vedere!” Gli allievi tornarono dicendo che avevano solo cinque pagnotte e due pesci.
+
+##### 39-40
+
+Allora Gesù ordinò alla folla di sedersi a gruppi sull’erba e in breve si formarono gruppi di cinquanta e cento persone.
+
+##### 41-42
+
+Gesù prese le cinque pagnotte e i due pesci e alzando lo sguardo verso il cielo fece una preghiera di benedizione per quel cibo. Poi cominciò a rompere le pagnotte dandole ai discepoli da distribuire alla folla. Fece lo stesso con i pesci. E la folla mangiò a sazietà.
+
+##### 43-44
+
+Quella volta mangiarono circa cinquemila persone e alla fine si raccolsero dodici ceste di avanzi.
+
+#### Gesù cammmina sull’acqua
+
+##### 45-46
+
+Subito dopo, Gesù fece risalire i suoi allievi sulla barca, e gli ordinò di attraversare il lago in direzione di Betsaida, dove li avrebbe raggiunti. Voleva rimanere ancora un po’ per salutare la gente che tornava a casa. Poi Gesù salì sulle colline a pregare.
+
+##### 47
+
+Quando si fece notte, i discepoli si trovavano in mezzo al lago, mentre Gesù era rimasto a terra.
+
+##### 48-49
+
+Gesù si accorse che i suoi allievi erano in difficoltà e facevano fatica a remare contro vento. Verso le quattro di mattina, Gesù andò incontro a loro, camminando sull’acqua. Stava per superarli quando lo avvistarono e si misero ad urlare di paura, scambiandolo per un fantasma.
+
+##### 50-52
+
+Gesù però, si fece subito riconoscere, dicendo: “Tranquilli! Sono io! Non vi spaventate!” Salì sulla barca e il ventò si fermò. Gli allievi rimasero a bocca aperta, perché non avevano capito il miracolo della moltiplicazione del pane. Anzi, avevano grosse difficoltà a seguirlo.
+
+#### Malati guariti a Gennesaret
+
+##### 53-55
+
+Arrivati a Gennesaret, sull’altra riva, gettarono l’àncora e scesero a terra. Le persone riconobbero subito Gesù e fecero correre la voce. Dovunque andava, gli portavano malati in barella.
+
+##### 56
+
+In tutti i posti dove si presentava, nei paesi, nelle città, in campagna, gli portavano i malati nelle piazze e lo imploravano di lasciargli toccare almeno l’orlo dei suoi vestiti. E tutti quelli che lo toccavano venivano guariti.
 
 
-[<-indietro](Mc05.html) [avanti->](Mc07.html)
+------------------------------------------------------------------------
+[<-indietro](Mc05.html) [avanti ->](Mc07.html)
